--- a/quarkus-social/pom.xml
+++ b/quarkus-social/pom.xml
@@ -75,6 +75,10 @@
       <artifactId>rest-assured</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.module</groupId>
+      <artifactId>jackson-module-jakarta-xmlbind-annotations</artifactId>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
