--- a/quarkus-social/src/main/resources/application.properties
+++ b/quarkus-social/src/main/resources/application.properties
@@ -1,5 +1,15 @@
+#GLOBAL
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=admin
 quarkus.datasource.password=admin
 quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/quarkus-social
 quarkus.datasource.jdbc.max-size=16
+
+#TEST
+%test.quarkus.datasource.db-kind=h2
+%test.quarkus.datasource.username=sa
+%test.quarkus.datasource.password=
+%test.quarkus.datasource.jdbc.url=jdbc:h2:~/h2/oracle_test;MODE=Oracle;AUTO_SERVER=TRUE
+%test.quarkus.datasource.jdbc.max-size=16
+%test.quarkus.hibernate-orm.database.generation=drop-and-create
+%test.quarkus.hibernate-orm.log.sql=true
